fixed issue #34
overrode material's input type file so it doesn't overflow on very small
width (otherwise the page gets a horizontal scroll bar on small viewport width

--- a/src/mrs/static/css/base.css
+++ b/src/mrs/static/css/base.css
@@ -44,6 +44,13 @@ body {
 }
 
 /*
+    Material UI overrides
+*/
+form .section.row input[type="file"] {
+    overflow: hidden;
+}
+
+/*
     Inline tag styles
 */
 strong {
